fix: using spacing module

--- a/src/component/radio/deprecated/style/_module.scss
+++ b/src/component/radio/deprecated/style/_module.scss
@@ -6,7 +6,7 @@
     #{ns-group(radio)}:not(#{ns(radio-rich)}) {
       input[type="radio"] {
         + label {
-          background-position: calc(-#{space(1v)} + 1px) calc(#{space(2v)} + 1px), calc(-#{space(1v)} + 1px) calc(#{space(2v)} + 1px);
+          background-position: spacing.space(calc(-1v + 1px) calc(2v + 1px)), spacing.space(calc(-1v + 1px) calc(2v + 1px));
         }
       }
     }
@@ -14,7 +14,7 @@
     #{ns-group(radio)}--sm:not(#{ns(radio-rich)}) {
       input[type="radio"] {
         + label {
-          background-position: calc(-#{space(0.5v)} + 1px) calc(#{space(4v)} - 1px), calc(-#{space(0.5v)} + 1px) calc(#{space(4v)} - 1px);
+          background-position: spacinng.space(calc(-0.5v + 1px) calc(4v - 1px)), spacing.space(calc(-0.5v + 1px) calc(4v - 1px));
         }
       }
     }
